--- a/modules/hanna-css/src/css/Carousel.scss
+++ b/modules/hanna-css/src/css/Carousel.scss
@@ -4,9 +4,6 @@
 html.before-sprinkling .Carousel:not([data-sprinkled]) {
   padding-bottom: var(--CarouselStepper--height);
 }
-html.before-sprinkling[class] > .Carousel__items {
-  overflow: visible;
-}
 
 .Carousel__items {
   display: flex;
