--- a/modules/hanna-css/src/css/Gallery.scss
+++ b/modules/hanna-css/src/css/Gallery.scss
@@ -12,9 +12,6 @@
   html.before-sprinkling .Gallery:not([data-sprinkled]) {
     padding-bottom: var(--CarouselStepper--height);
   }
-  html.before-sprinkling[class] > .Gallery__items {
-    overflow: visible;
-  }
 
   .Gallery {
     @include SeenEffect--fadeup();
